--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             <div class="col-md-6 mx-auto ">
                 <div class="card bg-primary mt-5 p-4" id="content">
-                        <h1 class="header-brand p-6" id="header">NUMBER FACTS APP</h1>
+                        <h1 class="header-brand p-6" id="header">DATE FACTS APP</h1>
                         <form class="form-group"id="form">
                                 <input type='number' placeholder="Month" id="month" class="form-control form-control-lg m-2">
                                 <input type='number' placeholder="Day" id="day" class="form-control form-control-lg m-2">
